<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dashboard</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="settings_name">Dashboard settings</string>
    <string name="exit">Exit</string>
    <string name="unit_rpm">rpm</string>
    <string name="notification_desc">Display dashboard</string>
    <string name="high_load">High load</string>
    <string name="high_load_desc">Minimum value to display high engine load animation</string>
    <string name="medium_load">Medium load</string>
    <string name="medium_load_desc">Minimum value to display medium engine load animation</string>
    <string name="low_load">Low load</string>
    <string name="low_load_desc">Minimum value to display low engine load animation</string>
    <string name="general">Main settings</string>
    <string name="engine_load">Engine load animation</string>
    <string name="shift_light">Shift light</string>
    <string name="shift_light_1">First shift light</string>
    <string name="shift_light_1_desc">At which engine speed should the 1st shift light be on</string>
    <string name="shift_light_2">Second shift light</string>
    <string name="shift_light_2_desc">At which engine speed should the 2nd shift light be on</string>
    <string name="shift_light_3">Third shift light</string>
    <string name="shift_light_3_desc">At which engine speed should the 3rd shift light be on</string>
    <string name="shift_light_4">Fourth shift light</string>
    <string name="shift_light_4_desc">At which engine speed should the 4th shift light be on</string>
    <string name="shift_light_5">Fifth shift light</string>
    <string name="shift_light_5_desc">At which engine speed should the 5th shift light be on</string>

    <!-- Colors -->
    <string name="colors">Colors</string>
    <string name="normal_text_color">Text color</string>
    <string name="warning_text_color">Warning text color</string>
    <string name="danger_text_color">Danger text color</string>
    <string name="background_color">Background color</string>
    <string name="background_picture">Background picture</string>
    <string name="check_mano_color">Use specific color for manometer</string>
    <string name="mano_color">Manometer color</string>
    <string name="check_red_zone_color">Use specific color for manometer\'s red zone</string>
    <string name="red_zone_color">Red zone color</string>
    <string name="check_hand_color">Use specific color for manometer\'s hand</string>
    <string name="hand_color">Hand color</string>
    <string name="check_mano_back_color">Use specific color for manometer\'s background</string>
    <string name="mano_back_color">Manometer\'s background color</string>
    <string name="mano_back_transparency">Manometer\'s background transparency</string>

    <string name="coolant_temperature">Engine coolant temperature</string>
    <string name="min_cool_temp">Minimum value</string>
    <string name="min_cool_temp_desc">Minimum value under which temperature is displayed with warning color</string>
    <string name="max_cool_temp">Maximum value</string>
    <string name="max_cool_temp_desc">Maximum value over which temperature is displayed with danger color</string>

    <!-- Background -->
    <string name="none">None</string>
    <string name="lightning1">Lightning 1</string>
    <string name="lightning2">Lightning 2</string>
    <string name="other">Other</string>
    <string name="current">Current</string>

    <!-- Manometer -->
    <string name="manometer">Manometer</string>
    <string name="mano_max">Max value</string>
    <string name="mano_max_desc">Manometer\'s max value</string>
    <string name="mano_red_start">Red zone start</string>
    <string name="mano_red_start_desc">Engine speed at which red zone starts</string>
    <string name="mano_intermediates">Intermediates</string>
    <string name="mano_intermediates_desc">Number of intermediates between 0 and max value</string>
</resources>
